feat: earthquake apis and frontend creation
